infrastructure/onlinehost/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    app.kubernetes.io/name: mydata-api
    app.kubernetes.io/part-of: mydata-platform
