infrastructure/onlinehost/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydata-api
  namespace: __NAMESPACE__
  labels:
    app: mydata-api
spec:
  selector:
    app: mydata-api
  ports:
    - name: http
      port: 80
      targetPort: 8100
  type: ClusterIP
